--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ main {
     margin: auto;
 
     display: grid;
-    grid-row-gap: 1rem;
+    gap: 1rem;
 
     grid-template-areas:
     'video-player video-player'
@@ -116,13 +116,14 @@ main {
     grid-template-columns: repeat(6, auto);
     justify-content: space-evenly;
     align-items: end;
-    grid-gap: 1rem;
+    gap: 1rem;
+
 }
 
 .action {
     display: grid;
     grid-template-columns: auto auto;
-    grid-gap: 0.25rem;
+    gap: 0.25rem;
     justify-content: center;
     align-items: center;
     font-size: 0.7rem;
@@ -147,7 +148,7 @@ main {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: start;
-    grid-gap: 1rem;
+    gap: 1rem;
 }
 
 .channel img {
@@ -192,7 +193,7 @@ main {
 .up-next a {
     display: grid;
     grid-template-columns: 4fr 5fr;
-    grid-gap: 0.5rem;
+    gap: 0.5rem;
     padding-bottom: 0.75rem;
 }
 
