--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ main {
 
     .actions {
         grid-template-columns: repeat(3, auto);
-        padding: 0 1rem;
+        margin-left: -0.5rem;
     }
 }
 
